Dev/src/TrainIt!/objects/Training_Certification__c.object
<CustomObject>
    <description>Custom Object to keep track of what Courses Instructors are certified to teach</description>
    <fields>
        <fullName>Certified_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who completed this instructor&apos;s certification?</inlineHelpText>
        <label>Certified by</label>
        <referenceTo>Training_Instructor__c</referenceTo>
        <relationshipName>CertifiedBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <formula>Course__r.Course_TItle__c +&quot; (&quot; + Course__r.Name + &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of Course</inlineHelpText>
        <label>Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Course/Class Instructor is certified to teach</inlineHelpText>
        <label>Course</label>
        <referenceTo>Training_Course__c</referenceTo>
        <relationshipName>Training_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Certification_Ends__c</fullName>
        <inlineHelpText>Does the certification expire?</inlineHelpText>
        <label>Date Certification Ends</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Certified__c</fullName>
        <inlineHelpText>Date the instructor was certified/accredited for teaching this course</inlineHelpText>
        <label>Date Certified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instructor_Name__c</fullName>
        <formula>Instructor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Full name of the Instructor.  (First, Middle, Last)</inlineHelpText>
        <label>Instructor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructor__c</fullName>
        <inlineHelpText>Lookup to Instructor for certifications</inlineHelpText>
        <label>Instructor</label>
        <referenceTo>Training_Instructor__c</referenceTo>
        <relationshipName>Training_Certifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Certification</label>
    <nameField>
        <displayFormat>TECN-{00000000}</displayFormat>
        <label>Training: Certification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>